--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script type="text/babel">
         const { useState, useEffect, useRef } = React;
 
-        // 🔥 FIREBASE CONFIG - SUBSTITUA COM SUAS CREDENCIAIS
+        // 🔥 FIREBASE CONFIG 
         const firebaseConfig = {
             apiKey: "AIzaSyB58M_OFgdEbsOr8u-fmw_H6Ws06o8pTkc",
             authDomain: "roxx-music-bar.firebaseapp.com",
@@ -90,7 +90,7 @@
                 if (showQR && qrRef.current && window.QRCode) {
                     qrRef.current.innerHTML = '';
                     new QRCode(qrRef.current, {
-                        text: window.location.origin + '/cliente.html',
+                        text: 'https://roxxmusicbar.netlify.app/cliente.html',
                         width: 256,
                         height: 256
                     });
