--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     <script type="text/babel">
         const { useState, useEffect, useRef } = React;
 
-        // 🔥 FIREBASE CONFIG 
         const firebaseConfig = {
             apiKey: "AIzaSyB58M_OFgdEbsOr8u-fmw_H6Ws06o8pTkc",
             authDomain: "roxx-music-bar.firebaseapp.com",
@@ -231,13 +230,26 @@
                     totalSales: todayOrders.reduce((sum, o) => sum + o.total, 0),
                     totalOrders: todayOrders.length,
                     paymentMethods: {
-                        cash: todayOrders.filter(o => o.paymentMethod === 'cash').length,
-                        credit: todayOrders.filter(o => o.paymentMethod === 'credit').length,
-                        debit: todayOrders.filter(o => o.paymentMethod === 'debit').length,
+                        dinheiro: todayOrders.filter(o => o.paymentMethod === 'dinheiro').length,
+                        credito: todayOrders.filter(o => o.paymentMethod === 'cartao-credito' || o.paymentMethod === 'credit').length,
+                        debito: todayOrders.filter(o => o.paymentMethod === 'cartao-debito' || o.paymentMethod === 'debit').length,
                         pix: todayOrders.filter(o => o.paymentMethod === 'pix').length
                     },
                     todayOrders: sorted
                 };
+            };
+
+            const getPaymentMethodDisplay = (method) => {
+                const map = {
+                    'dinheiro': '💵 Dinheiro',
+                    'cartao-credito': '💳 Crédito',
+                    'cartao-debito': '💳 Débito',
+                    'pix': '📱 PIX',
+                    'cash': '💵 Dinheiro',
+                    'credit': '💳 Crédito',
+                    'debit': '💳 Débito'
+                };
+                return map[method] || method;
             };
 
             if (!userRole) {
@@ -251,7 +263,7 @@
                             </div>
                             <div className="flex flex-col gap-4 mb-6">
                                 <button onClick={() => setUserRole('admin')} className="w-full bg-gradient-to-r from-red-600 to-red-800 text-white font-black py-3 rounded-lg border-2 border-red-400">
-                                    🔒 ADMINISTRADOR
+                                    🔑 ADMINISTRADOR
                                 </button>
                                 <button onClick={() => setUserRole('cashier')} className="w-full bg-gradient-to-r from-purple-600 to-purple-800 text-white font-black py-3 rounded-lg border-2 border-purple-400">
                                     💰 CAIXA
@@ -312,7 +324,7 @@
                         <div className="bg-gray-800 border-b-2 border-gray-700">
                             <div className="max-w-7xl mx-auto flex gap-2 p-2">
                                 <button onClick={() => setActiveTab('menu')} className={`px-4 py-2 rounded font-bold ${activeTab === 'menu' ? 'bg-red-600' : 'bg-gray-700'} text-white`}>
-                                    🍔 Fazer Pedidos
+                                    📝 Fazer Pedidos
                                 </button>
                                 <button onClick={() => setActiveTab('products')} className={`px-4 py-2 rounded font-bold ${activeTab === 'products' ? 'bg-red-600' : 'bg-gray-700'} text-white`}>
                                     📦 Gerenciar Produtos
@@ -384,17 +396,17 @@
                                         <div className="bg-green-50 border-2 border-green-300 p-3 rounded text-center">
                                             <div className="text-2xl">💵</div>
                                             <div className="font-bold text-green-800">Dinheiro</div>
-                                            <div className="text-2xl font-black text-green-600">{stats.paymentMethods.cash}</div>
+                                            <div className="text-2xl font-black text-green-600">{stats.paymentMethods.dinheiro}</div>
                                         </div>
                                         <div className="bg-blue-50 border-2 border-blue-300 p-3 rounded text-center">
                                             <div className="text-2xl">💳</div>
                                             <div className="font-bold text-blue-800">Crédito</div>
-                                            <div className="text-2xl font-black text-blue-600">{stats.paymentMethods.credit}</div>
+                                            <div className="text-2xl font-black text-blue-600">{stats.paymentMethods.credito}</div>
                                         </div>
                                         <div className="bg-teal-50 border-2 border-teal-300 p-3 rounded text-center">
                                             <div className="text-2xl">💳</div>
                                             <div className="font-bold text-teal-800">Débito</div>
-                                            <div className="text-2xl font-black text-teal-600">{stats.paymentMethods.debit}</div>
+                                            <div className="text-2xl font-black text-teal-600">{stats.paymentMethods.debito}</div>
                                         </div>
                                         <div className="bg-purple-50 border-2 border-purple-300 p-3 rounded text-center">
                                             <div className="text-2xl">📱</div>
@@ -427,10 +439,7 @@
                                                         <div className="text-right">
                                                             <div className="text-2xl font-black text-green-600">R$ {order.total.toFixed(2)}</div>
                                                             <div className="text-xs text-gray-600 mt-1">
-                                                                {order.paymentMethod === 'cash' && '💵 Dinheiro'}
-                                                                {order.paymentMethod === 'credit' && '💳 Crédito'}
-                                                                {order.paymentMethod === 'debit' && '💳 Débito'}
-                                                                {order.paymentMethod === 'pix' && '📱 PIX'}
+                                                                {getPaymentMethodDisplay(order.paymentMethod)}
                                                             </div>
                                                             <div className={`mt-2 px-2 py-1 rounded text-xs font-bold ${order.status === 'entregue' ? 'bg-green-200 text-green-800' : order.status === 'pronto' ? 'bg-yellow-200 text-yellow-800' : order.status === 'em preparo' ? 'bg-blue-200 text-blue-800' : 'bg-red-200 text-red-800'}`}>
                                                                 {order.status === 'pendente' && '⏳ Pendente'}
@@ -470,7 +479,7 @@
                         {userRole === 'admin' && activeTab === 'menu' && (
                             <div className="grid grid-cols-1 lg:grid-cols-3 gap-4">
                                 <div className="lg:col-span-2 bg-white rounded-lg p-4">
-                                    <h2 className="text-2xl font-black mb-4">🍔 Cardápio</h2>
+                                    <h2 className="text-2xl font-black mb-4">📝 Cardápio</h2>
                                     <div className="grid grid-cols-1 md:grid-cols-2 gap-3">
                                         {menuItems.filter(item => item.available).map(item => (
                                             <button key={item.id} onClick={() => addToOrder(item)} className="border-4 border-orange-200 rounded-lg p-4 text-left bg-gradient-to-br from-orange-50 to-red-50 hover:shadow-lg transition">
@@ -516,7 +525,7 @@
                                                     <span className="text-2xl font-black text-orange-600">R$ {getTotal().toFixed(2)}</span>
                                                 </div>
                                                 <div className="flex flex-col gap-2">
-                                                    <button onClick={() => finalizeOrder('cash')} className="w-full bg-green-500 text-white font-black py-2 rounded">
+                                                    <button onClick={() => finalizeOrder('dinheiro')} className="w-full bg-green-500 text-white font-black py-2 rounded">
                                                         💵 Dinheiro
                                                     </button>
                                                     <button onClick={() => setShowCardModal(true)} className="w-full bg-blue-500 text-white font-black py-2 rounded">
@@ -570,10 +579,10 @@
                                 <div className="text-5xl mb-4">💳</div>
                                 <h2 className="text-2xl font-black mb-4">Tipo de Cartão</h2>
                                 <div className="flex flex-col gap-3">
-                                    <button onClick={() => finalizeOrder('credit')} className="w-full bg-gradient-to-r from-blue-500 to-blue-700 text-white font-black py-4 rounded text-xl">
+                                    <button onClick={() => finalizeOrder('cartao-credito')} className="w-full bg-gradient-to-r from-blue-500 to-blue-700 text-white font-black py-4 rounded text-xl">
                                         💳 CRÉDITO
                                     </button>
-                                    <button onClick={() => finalizeOrder('debit')} className="w-full bg-gradient-to-r from-green-500 to-green-700 text-white font-black py-4 rounded text-xl">
+                                    <button onClick={() => finalizeOrder('cartao-debito')} className="w-full bg-gradient-to-r from-green-500 to-green-700 text-white font-black py-4 rounded text-xl">
                                         💳 DÉBITO
                                     </button>
                                     <button onClick={() => setShowCardModal(false)} className="w-full bg-gray-300 text-gray-800 font-bold py-2 rounded mt-2">
